# aleph

./: .buckconfig  .buckconfig.local  .gitignore  BUCK  CONTRIBUTING.md  README.md  REVIEW.md  compile_commands.json  flake.nix  fmt-example  hie.yaml  lre.md
.claude/: settings.local.json
.ghc-pkg-db/: OneTuple-0.4.2-LPv9Ptl2zX7IYBlqwnekO7.conf  QuickCheck-2.15.0.1-FnFnaIlNOSs6HK8LzaTRNK.conf  StateVar-1.2.2-Dy7GHqm9O0yFuFoIVgxacB.conf  adjunctions-4.4.3-FieC37VI4SBGn8mp6iMKE5.conf  aeson-2.2.3.0-BAm0jGsz5AP3AuaLlPOevA.conf  aeson-pretty-0.8.10-6KRyDjwcbHH97wpUA2blsO.conf  ansi-terminal-1.1.3-4hg54oNJEBgGYgFtj2Ho6Z.conf  ansi-terminal-types-1.1.3-JGVhecbnjNoHGnxBpLweqw.conf  ansi-wl-pprint-1.0.2-IjA1rjtAwtgEbxNTcCVJ7J.conf  assoc-1.1.1-Fpg5xDjm4LzJzOy2WMBWgK.conf  async-2.2.5-LMf6IatO7unBmgPJOnsiMx.conf  attoparsec-0.14.4-1iV1i85jwE2AXeg9BtFVtT.conf  attoparsec-0.14.4-EAf7L8cWSsoE47kwVmXadS-attoparsec-internal.conf  attoparsec-aeson-2.2.2.0-EVW4jtQdkTzFVdSMAhx38o.conf  barbies-2.1.1.0-gMCqb7mhmoA0u7GhnSRCm.conf  base-compat-0.14.1-CW5nOGLvEvh6DCNzb4z84V.conf  base-compat-batteries-0.14.1-JPds5VLzaeMIHAOfpiRXRo.conf  base-orphans-0.9.3-Jm2d0DnqEGvIVhe0IVS9kl.conf  bifunctors-5.6.2-OFrj7iAEE2GFzeo61y3eE.conf  bitvec-1.1.5.0-5ACcum9k80X4H96PWHfxRe.conf  blaze-builder-0.4.4.1-5kohqniwZm19sqPlfAhRdu.conf  boring-0.2.2-1L0TJdw9D4y3KxXfZaH0av.conf  call-stack-0.4.0-F9O1GQwuupx8505aPpBR9k.conf  case-insensitive-1.2.1.0-FcBOJwTLcBrEdHrSFt3rYl.conf  character-ps-0.1-6qwAP8r4Gf9CkYfTkInLDK.conf  clock-0.8.4-BoSBw0VDB82KWo50HGG2ac.conf  cmdargs-0.10.22-BRqJGgSoz1SIBO6CfApHxc.conf  colour-2.3.6-1uDD9Z6TdgoCz8C6DmvALh.conf  comonad-5.0.9-9wlpd2BQZP7FRm6eBqgcQv.conf  concurrent-output-1.10.21-DXQIggVIiCbCIc0STAGZ7v.conf  conduit-1.3.6.1-5QReuy4dp9agysfpZ5Pro.conf  constraints-0.14.2-KffCZpoIfQh561Rx6DapZy.conf  contravariant-1.5.5-2cBAMZFuDm7Gn8W6FQGr8G.conf  cookie-0.5.1-7SJQNW47Pwp1fzTMokvAKS.conf  data-default-0.8.0.1-KXIWkdaLesgA05SZ6Y5gwU.conf  data-default-class-0.2.0.0-FwRvG7GsJ0OGeg59ehjEil.conf  data-fix-0.3.4-HPCahmlSVo17deWu6qrcw3.conf  distributive-0.6.2.1-8JXFzRgjEQkAe7JAKyvZsu.conf  dlist-1.0-73It4l165uh3fRYyCfPto.conf  erf-2.0.0.0-FOcjpNozTON4CFnFII33H6.conf  (+91 more)
dhall/: Build.dhall  Platform.dhall  Target.dhall
docs/: SUMMARY.md  book.toml  index.md
docs-options/: ndg.toml
linter/: aleph-lint.bash
nix/: _main.nix
none/: BUCK
prelude/: BUCK  alias.bzl  artifact_tset.bzl  artifacts.bzl  asserts.bzl  export_file.bzl  filegroup.bzl  (+6 more)
src/dice-rs/: BUCK  Cargo.toml  reindeer.toml
src/dice-rs/allocative/src/: impls.rs  lib.rs
src/dice-rs/bench/: Cargo.toml
src/dice-rs/bench/src/: main.rs
src/dice-rs/dice/src/: lib.rs
src/dice-rs/dice/src/impls/core/graph/: nodes.rs
src/dice-rs/dice/src/introspection/: graph.rs
src/dice-rs/dice_examples/: Cargo.toml
(+761 files in other folders)
