# src/dice-rs/Cargo.toml
#
# Workspace for vendored DICE crates from Buck2.
# Built with Cargo via Nix, then integrated into Buck2 builds.

[workspace]
members = [
    "allocative",
    "allocative_derive",
    "bench",
    "cmp_any",
    "dice",
    "dice_error",
    "dice_examples",
    "dice_futures",
    "dupe",
    "dupe_derive",
    "gazebo",
    "gazebo_derive",
    "lock_free_hashtable",
    "lock_free_vec",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/straylight-software/aleph"

[workspace.dependencies]
# Internal crates
allocative = { path = "allocative", features = ["anyhow", "dashmap", "futures", "once_cell", "parking_lot", "slab", "sorted_vector_map", "tokio", "triomphe"] }
allocative_derive = { path = "allocative_derive" }
cmp_any = { path = "cmp_any" }
dice = { path = "dice" }
dice_error = { path = "dice_error" }
dice_futures = { path = "dice_futures" }
dupe = { path = "dupe" }
dupe_derive = { path = "dupe_derive" }
gazebo = { path = "gazebo" }
gazebo_derive = { path = "gazebo_derive" }
lock_free_hashtable = { path = "lock_free_hashtable" }
lock_free_vec = { path = "lock_free_vec" }

# External crates
anyhow = "1.0"
anymap3 = "1.0"
assert_matches = "1.5"
async-trait = "0.1"
atomic = "0.5.1"
bincode = "1.3"
bumpalo = "3.14"
bytemuck = { version = "1.14", features = ["derive"] }
ctor = "0.1"
dashmap = "5.5"
derivative = "2.2"
derive_more = { version = "1.0.0", features = ["full"] }
either = "1.9"
futures = "0.3"
fxhash = "0.2"
indoc = "2.0"
itertools = "0.13"
num_cpus = "1.16"
once_cell = "1.19"
parking_lot = { version = "0.12", features = ["send_guard"] }
pin-project = "1.1"
proc-macro2 = "1.0"
quickcheck = "1.0"
quote = "1.0"
ref-cast = "1.0"
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
slab = "0.4"
sorted_vector_map = "0.2"
static_assertions = "1.1"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
take_mut = "0.2"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
triomphe = "0.1"
typed-arena = "2.0"

[profile.release]
lto = true
codegen-units = 1
